frontend: fix transaction amounts with many decimals on mobile
Before only the InfoColumn that shows date and 'Received to' info,
was shrinking with ...

This was not enough to display long ETH amounts with potentially
many decimals.

Changed so that the amount itself shrinks too, which should only
happen for very large amounts or coins with lots of decimals.

--- a/frontends/web/src/components/amount/conversion-amount.module.css
+++ b/frontends/web/src/components/amount/conversion-amount.module.css
@@ -8,7 +8,7 @@
   display: flex;
   font-variant: tabular-nums;
   margin-left: auto;
-  gap: var(--space-eight);
+  gap: 3px;
 }
 
 .txPrefix,
@@ -16,6 +16,7 @@
   color: var(--color-secondary);
   font-size: 14px;
   line-height: 1.285714;
+  white-space: nowrap;
 }
 
 .txConversionAmount .txUnit {
