--- a/frontends/web/src/components/transactions/transaction.module.css
+++ b/frontends/web/src/components/transactions/transaction.module.css
@@ -63,9 +63,13 @@
   line-height: 1.285714;
   padding: 0 var(--space-quarter) 0 48px;
   text-align: right;
+  white-space: nowrap;
 }
 @media (max-width: 560px) {
   .txAmountsColumn {
+    flex-shrink: 1;
+    flex-basis: 60%;
+    max-width: 60%;
     padding-left: 24px;
   }
 }
@@ -76,15 +80,19 @@
 }
 
 .txAmount {
+  align-items: baseline;
   font-size: 16px;
   font-variant: tabular-nums;
+  gap: 3px;
+  justify-content: flex-end;
   line-height: 1.25;
-  display: block;
+  display: flex;
   padding: 3px 0 3px 0;
 }
 @media (max-width: 560px) {
   .txAmount {
     padding-bottom: 4px;
+    flex-shrink: 1;
   }
 }
 
